--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,5 +8,6 @@
 @import "modules/btn";
 @import "modules/card-program";
 @import "modules/video-teaser-card";
+@import "modules/speakers";
 @import "modules/primary-divider";
 
