--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -21,6 +21,10 @@ a {
 	width: 100%;
 	margin: 0 auto;
 	padding-inline: 60px;
+
+    @include SmallTable {
+        padding-inline: 15px;
+    }
 }
 
 .container-fluid {
@@ -44,10 +48,18 @@ h3 {
 
 #site-content {
     margin-top: 120px;
+
+    @include Table {
+        margin-top: 60px;
+    }
 }
 
 .spacer {
     margin-bottom: 120px;
+
+    @include Table {
+        margin-bottom: 60px;
+    }
 }
 
 .section-title {
