--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -14,9 +14,12 @@
 $color-neutral-white: #ffffff !default;
 $color-neutral-dark: #121212 !default;
 
+
+
 $color-light-50: #FAFAFA !default;
 // $color-dark-800: #121212 !default;
 $color-dark-800: rgb(18, 18, 18) !default;
+$color-dark-700: rgb(25, 25, 25) !default;
 $color-primary-500: #1F3480 !default;
 $color-secondary-500: #4A19B3 !default;
 $color-secondary-600: #3b148f !default;
