--- a/scss/modules/_card-program.scss
+++ b/scss/modules/_card-program.scss
@@ -13,6 +13,11 @@
     width: 100%;
     transition: $transition-default;
     
+    @include Table {
+        padding: 30px;
+    }
+
+
     &__content {
         display: flex;
         flex-direction: column;
