--- a/scss/modules/_video-teaser-card.scss
+++ b/scss/modules/_video-teaser-card.scss
@@ -1,3 +1,22 @@
+.articles-event__wrapper {
+    width: 100%;
+    /* display: flex; */
+    /* flex-direction: row; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
+    /* align-items: stretch; */
+
+    @include Table {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+    @include SmallTable {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+
 .video-card-teaser {
 
     width: 100%;
@@ -13,6 +32,11 @@
         iframe {
             width: 100%;
             height: 100%;
+        }
+
+        @include SmallTable {
+            aspect-ratio: 4/3;
+            height: auto;
         }
     }
     
