--- a/css/main.css
+++ b/css/main.css
@@ -458,4 +458,24 @@ h3 {
   color: #ffffff;
   font-size: 24px;
   text-transform: uppercase;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.partnersSwiper .swiper-slide {
+  height: 135px;
+  overflow: hidden;
 }/*# sourceMappingURL=main.css.map */
