--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import "modules/video-teaser-card";
 @import "modules/speakers";
 @import "modules/primary-divider";
+@import "modules/swiper";
 
-@import "plugins/swiper";
+@import "plugins/swiper-bundle";
 
