--- a/scss/css/swiper-bundle.css
+++ b/scss/css/swiper-bundle.css
@@ -1,484 +1,3 @@
-body {
-  background-color: #FAFAFA;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Inter", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-/* Reset */
-a {
-  text-decoration: none;
-}
-
-/* Containers */
-.container {
-  max-width: 100%;
-  width: 100%;
-  margin: 0 auto;
-  padding-inline: 60px;
-}
-@media screen and (max-width: 768px) {
-  .container {
-    padding-inline: 15px;
-  }
-}
-
-.container-fluid {
-  max-width: 100%;
-  width: 100%;
-  margin: 0 auto;
-}
-
-h2 {
-  font-size: 36px;
-  text-transform: uppercase;
-}
-
-h3 {
-  /* color: var(--color-neutral-white); */
-  font-size: 24px;
-  text-transform: uppercase;
-}
-
-#site-content {
-  margin-top: 120px;
-}
-@media screen and (max-width: 992px) {
-  #site-content {
-    margin-top: 60px;
-  }
-}
-
-.spacer {
-  margin-bottom: 120px;
-}
-@media screen and (max-width: 992px) {
-  .spacer {
-    margin-bottom: 60px;
-  }
-}
-
-.section-title {
-  margin-bottom: 40px;
-}
-
-/* footer */
-.footer {
-  padding: 94px 0;
-  background-color: #121212;
-}
-.footer__brand {
-  color: #ffffff;
-  font-size: 24px;
-  text-transform: uppercase;
-}
-
-/* Header */
-.header-gif__img {
-  width: 100%;
-  aspect-ratio: 2/1;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
-  display: block;
-}
-
-/* sections */
-.more-links {
-  padding: 60px 0;
-  background-color: #4A19B3;
-  width: 100%;
-  color: #ffffff;
-}
-.more-links__articles {
-  display: flex;
-  flex-direction: column;
-  gap: 0;
-  list-style-type: none;
-}
-.more-links__article {
-  transition: all 0.25s ease-in-out;
-  display: flex;
-  flex-direction: row;
-  gap: 0;
-  padding: 20px 0;
-  border-bottom: 1px solid #ffffff;
-  border-top: 1px solid #ffffff;
-}
-.more-links__article:hover {
-  padding-left: 20px;
-}
-.more-links__article:first-child {
-  border-top: 2px solid #ffffff;
-}
-.more-links__article:last-child {
-  border-bottom: 2px solid #ffffff;
-}
-.more-links__article__item {
-  color: #ffffff;
-  font-size: 24px;
-  text-transform: uppercase;
-}
-
-.navbar {
-  background-color: #121212;
-  padding: 20px 0;
-  width: 100%;
-  position: fixed;
-  z-index: 10;
-  top: 0;
-  left: 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-}
-@supports ((-webkit-backdrop-filter: saturate(180%) blur(20px)) or (backdrop-filter: saturate(180%) blur(20px))) {
-  .navbar {
-    background-color: rgba(18, 18, 18, 0.9);
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
-            backdrop-filter: saturate(180%) blur(20px);
-  }
-}
-@media screen and (max-width: 768px) {
-  .navbar {
-    background-color: #121212;
-  }
-}
-.navbar__wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  gap: 32px;
-}
-@media screen and (max-width: 768px) {
-  .navbar__wrapper {
-    flex-direction: column;
-  }
-}
-.navbar__general {
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-  align-items: center;
-  justify-content: space-between;
-}
-@media screen and (max-width: 768px) {
-  .navbar__general {
-    width: 100%;
-  }
-}
-.navbar__brand {
-  color: #ffffff;
-  font-size: 24px;
-  text-transform: uppercase;
-}
-.navbar-toggle {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  background-color: transparent;
-  border: none;
-  flex-shrink: 0;
-}
-.navbar-toggle:hover {
-  cursor: pointer;
-}
-@media screen and (max-width: 768px) {
-  .navbar-toggle {
-    display: flex;
-  }
-}
-.navbar-collapse {
-  display: flex;
-  transition: all 0.25s ease-in-out;
-  gap: 30px;
-}
-@media (min-width: 769px) {
-  .navbar-collapse {
-    display: flex !important;
-  }
-}
-@media screen and (max-width: 768px) {
-  .navbar-collapse:has(.btn) .navbar__links {
-    margin-bottom: 30px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .navbar-collapse {
-    display: none;
-    width: 100%;
-    flex-direction: column;
-  }
-}
-.navbar__links {
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-  align-items: center;
-  list-style-type: none;
-}
-@media screen and (max-width: 768px) {
-  .navbar__links {
-    flex-direction: column;
-    align-items: stretch;
-    width: 100%;
-    gap: 0;
-  }
-}
-.navbar__link {
-  color: #ffffff;
-  transition: all 0.25s ease-in-out;
-}
-.navbar__link:hover {
-  text-decoration: underline;
-}
-@media screen and (max-width: 768px) {
-  .navbar__link:hover {
-    padding: 20px;
-    display: block;
-    width: 100%;
-    border-radius: 10px;
-    background-color: rgb(25, 25, 25);
-    text-decoration: none;
-  }
-}
-@media screen and (max-width: 768px) {
-  .navbar__link {
-    padding: 20px 20px 20px 0;
-    display: block;
-    width: 100%;
-    border-radius: 10px;
-  }
-}
-
-/* btn */
-.btn {
-  background-color: transparent;
-  padding: 8px 24px;
-  font-size: 16px;
-  color: #ffffff;
-  display: inline-block;
-  transition: all 0.25s ease-in-out;
-}
-.btn__primary {
-  background-color: #4A19B3;
-  color: #ffffff;
-}
-.btn__primary:hover {
-  background-color: #3b148f;
-  color: #ffffff;
-}
-
-.program__wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
-.card-program {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  padding: 60px;
-  background-color: #ffffff;
-  width: 100%;
-  transition: all 0.25s ease-in-out;
-}
-@media screen and (max-width: 992px) {
-  .card-program {
-    padding: 30px;
-  }
-}
-.card-program__content {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-.card-program__title {
-  transition: all 0.25s ease-in-out;
-  color: #1F3480;
-}
-.card-program__date {
-  padding: 10px 20px;
-  background-color: #4A19B3;
-  color: #ffffff;
-  align-self: flex-start;
-  font-size: 24px;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-.card-program:hover .card-program__title {
-  text-decoration: underline;
-  transition: all 0.25s ease-in-out;
-}
-
-.articles-event__wrapper {
-  width: 100%;
-  /* display: flex; */
-  /* flex-direction: row; */
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 5px;
-  /* align-items: stretch; */
-}
-@media screen and (max-width: 992px) {
-  .articles-event__wrapper {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media screen and (max-width: 768px) {
-  .articles-event__wrapper {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-.video-card-teaser {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 0;
-}
-.video-card-teaser__video {
-  height: 100%;
-  width: 100%;
-}
-.video-card-teaser__video iframe {
-  width: 100%;
-  height: 100%;
-}
-@media screen and (max-width: 768px) {
-  .video-card-teaser__video {
-    aspect-ratio: 4/3;
-    height: auto;
-  }
-}
-.video-card-teaser__body {
-  width: 100%;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  background-color: #1F3480;
-}
-.video-card-teaser__body__h3 {
-  color: #ffffff;
-  /* font-size: 24px;
-  text-transform: uppercase; */
-}
-.video-card-teaser__body__lists {
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-.video-card-teaser__body__lists__item {
-  color: #ffffff;
-}
-.video-card-teaser:nth-child(2n) .video-card-teaser__body {
-  background-color: #ffffff;
-}
-.video-card-teaser:nth-child(2n) .video-card-teaser__body__lists__item {
-  color: rgb(18, 18, 18);
-}
-.video-card-teaser:nth-child(2n) .video-card-teaser__body__h3 {
-  color: rgb(18, 18, 18);
-  /* font-size: 24px;
-  text-transform: uppercase; */
-}
-
-/* speakers */
-.speakers__wrapper {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  width: 100%;
-  gap: 30px;
-}
-@media screen and (max-width: 992px) {
-  .speakers__wrapper {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media screen and (max-width: 768px) {
-  .speakers__wrapper {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-.card-speaker {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  transition: all 0.25s ease-in-out;
-}
-.card-speaker__wrapper-img {
-  width: 100%;
-  aspect-ratio: 4/3;
-  position: relative;
-  /* height: 100%; */
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
-  overflow: hidden;
-}
-.card-speaker__wrapper-img__img {
-  width: 100%;
-  position: absolute;
-  height: 100%;
-  top: 0;
-  left: 0;
-  transition: all 0.25s ease-in-out;
-  transform: scale(1);
-}
-.card-speaker__name {
-  color: #121212;
-  transition: all 0.25s ease-in-out;
-}
-.card-speaker:hover .card-speaker__wrapper-img__img {
-  transform: scale(1.1) rotate(2deg);
-}
-.card-speaker:hover .card-speaker__name {
-  color: #1F3480;
-  text-decoration: underline;
-}
-
-.primary-divider {
-  background-color: #4A19B3;
-  padding: 12px 0;
-  width: 100%;
-  overflow: hidden;
-}
-.primary-divider__text {
-  color: #ffffff;
-  font-size: 24px;
-  text-transform: uppercase;
-}
-
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #ffffff;
-  /* Center slide text vertically */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.partnersSwiper .swiper-slide {
-  height: 135px;
-  overflow: hidden;
-}
-
 /**
  * Swiper 8.4.5
  * Most modern mobile touch slider and framework with hardware accelerated transitions
@@ -1164,4 +683,4 @@ button.swiper-pagination-bullet {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   overflow: hidden;
-}/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=swiper-bundle.css.map */
