--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -3,10 +3,51 @@
     padding: 94px 0;
     background-color: $color-neutral-dark;
     
+    &__wrapper {
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+        justify-content: space-between;
+    }
+
+    &__content {
+        max-width: 380px;
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+
+        &__general {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+    }
+
+    &__copy {
+        color: $color-neutral-white;
+    }
+
     &__brand {
         color: $color-neutral-white;
         font-size: 24px;
         text-transform: uppercase;
+    }
+
+    &__form {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+
+        &__title {
+            color: $color-neutral-white;
+        }
+
+        &-content {
+            display: flex;
+            flex-direction: row;
+            gap: 15px;
+            align-items: stretch;
+        }
     }
 }
 
