--- a/css/main.css
+++ b/css/main.css
@@ -66,15 +66,57 @@ h3 {
   margin-bottom: 40px;
 }
 
+.input {
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  border-radius: 0px;
+  padding: 15px;
+  color: #ffffff;
+}
+
 /* footer */
 .footer {
   padding: 94px 0;
   background-color: #121212;
 }
+.footer__wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  justify-content: space-between;
+}
+.footer__content {
+  max-width: 380px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.footer__content__general {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.footer__copy {
+  color: #ffffff;
+}
 .footer__brand {
   color: #ffffff;
   font-size: 24px;
   text-transform: uppercase;
+}
+.footer__form {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.footer__form__title {
+  color: #ffffff;
+}
+.footer__form-content {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  align-items: stretch;
 }
 
 /* Header */
@@ -273,6 +315,7 @@ h3 {
 .btn__primary:hover {
   background-color: #3b148f;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .program__wrapper {
