--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -65,3 +65,11 @@ h3 {
 .section-title {
     margin-bottom: 40px;
 }
+
+.input {
+    background-color: transparent;
+    border: 1px solid $color-neutral-white;
+    border-radius: 0px;
+    padding: 15px;
+    color: $color-neutral-white;
+}
