--- a/scss/modules/_btn.scss
+++ b/scss/modules/_btn.scss
@@ -14,6 +14,7 @@
         &:hover {
             background-color: $color-secondary-600;
             color: $color-neutral-white;
+            cursor: pointer;
         }
     }
 }
