--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,12 @@
 @import "modules/speakers";
 @import "modules/primary-divider";
 @import "modules/swiper";
+// index
+@import "modules/goals";
+@import "modules/phases";
+@import "modules/feat";
+@import "modules/milestones";
+
 
 @import "plugins/swiper-bundle";
 
