--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -11,11 +11,6 @@
 /* sections */
 
 
-
-
-
-
-
 .more-links {
     padding: 60px 0;
     background-color: $color-secondary-500;
@@ -54,6 +49,54 @@
         &__item {
             color: $color-neutral-white;
             font-size: 24px;
+            text-transform: uppercase;
+        }
+    }
+}
+
+// Page Main
+
+.header-content {
+    &__wrapper {
+        width: 100%;
+        // height: 600px;
+        aspect-ratio: 2/1;
+        object-fit: cover;
+        object-position: center;
+        display: flex;
+        background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/HeaderImage.jpg');
+        // background-image: url('../img/HeaderImage.jpg');
+        justify-content: center;
+        align-items: center;
+        padding: 120px 60px;
+        // position: relative;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        // &::after {
+        //     content: '';
+        //     position: absolute;
+        //     top: 0;
+        //     left: 0;
+        //     width: 100%;
+        //     height: 100%;
+        //     background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+        //     z-index: 1;
+        // }
+    }
+
+    &__title {
+        // z-index: 2;
+        max-width: 1248px;
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        align-items: flex-start;
+
+        &__h1 {
+            color: $color-neutral-white;
+            font-size: 36px;
             text-transform: uppercase;
         }
     }
