--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@
 @import "modules/phases";
 @import "modules/feat";
 @import "modules/milestones";
+@import "modules/power";
 
 
 @import "plugins/swiper-bundle";
