--- a/scss/modules/_swiper.scss
+++ b/scss/modules/_swiper.scss
@@ -28,3 +28,18 @@
         overflow: hidden;
     }
 }
+
+.gallerySwiper {
+    .swiper-slide {
+        aspect-ratio: 1/1;
+        overflow: hidden;
+        width: 100%;
+        
+        .gallery-photo {
+            object-fit: cover;
+            object-position: center;
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
