--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -2,10 +2,15 @@
 .header-gif__img {
     width: 100%;
     // height: 600px;
-    aspect-ratio: 2/1;
+    // aspect-ratio: 2/1;
+    aspect-ratio: 16/9;
     object-fit: cover;
     object-position: center;
     display: block;
+
+    @include Table {
+        margin-top: 85px;
+    }
 }
 
 /* sections */
@@ -60,7 +65,7 @@
     &__wrapper {
         width: 100%;
         // height: 600px;
-        aspect-ratio: 2/1;
+        aspect-ratio: 16/9;
         object-fit: cover;
         object-position: center;
         display: flex;
