--- a/scss/modules/_swiper.scss
+++ b/scss/modules/_swiper.scss
@@ -26,6 +26,22 @@
     .swiper-slide {
         height: 135px;
         overflow: hidden;
+        // padding: 30px;
+
+        a {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            
+        }
+        
+        .partners-client {
+            // height: 50px;
+            width: 50%;
+        }
     }
 }
 
