--- a/css/main.css
+++ b/css/main.css
@@ -569,6 +569,17 @@ h3 {
   height: 135px;
   overflow: hidden;
 }
+.partnersSwiper .swiper-slide a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+.partnersSwiper .swiper-slide .partners-client {
+  width: 50%;
+}
 
 .gallerySwiper .swiper-slide {
   aspect-ratio: 1/1;
