--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,11 @@ h3 {
   font-size: 24px;
   text-transform: uppercase;
 }
+@media screen and (max-width: 992px) {
+  h3 {
+    font-size: 18px;
+  }
+}
 
 #site-content {
   margin-top: 120px;
@@ -261,6 +266,15 @@ h3 {
   color: #ffffff;
   font-size: 24px;
   text-transform: uppercase;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+.navbar__brand__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .navbar-toggle {
   display: none;
@@ -404,6 +418,11 @@ h3 {
   font-weight: 600;
   text-transform: uppercase;
 }
+@media screen and (max-width: 992px) {
+  .card-program__date {
+    font-size: 16px;
+  }
+}
 .card-program:hover .card-program__title {
   text-decoration: underline;
   transition: all 0.25s ease-in-out;
@@ -521,7 +540,6 @@ h3 {
 .card-speaker__wrapper-img__img {
   width: 100%;
   position: absolute;
-  height: 100%;
   top: 0;
   left: 0;
   transition: all 0.25s ease-in-out;
