--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -44,6 +44,10 @@ h3 {
     /* color: var(--color-neutral-white); */
     font-size: 24px;
     text-transform: uppercase;
+    
+    @include Table {
+        font-size: 18px;
+    }
 }
 
 #site-content {
