--- a/scss/modules/_card-program.scss
+++ b/scss/modules/_card-program.scss
@@ -37,6 +37,10 @@
         font-size: 24px;
         font-weight: 600;
         text-transform: uppercase;
+
+        @include Table {
+            font-size: 16px;
+        }
     }
     
     &:hover .card-program__title {
