--- a/scss/modules/_navbar.scss
+++ b/scss/modules/_navbar.scss
@@ -48,6 +48,16 @@
         color: $color-neutral-white;
         font-size: 24px;
         text-transform: uppercase;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+
+        &__icon {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
 
     &-toggle {
