--- a/scss/modules/_speakers.scss
+++ b/scss/modules/_speakers.scss
@@ -32,7 +32,7 @@
         &__img {
             width: 100%;
             position: absolute;
-            height: 100%;
+            // height: 100%;
             top: 0;
             left: 0;
             transition: $transition-default;
