--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,11 @@ h2 {
   font-size: 36px;
   text-transform: uppercase;
 }
+@media screen and (max-width: 992px) {
+  h2 {
+    font-size: 24px;
+  }
+}
 
 h3 {
   /* color: var(--color-neutral-white); */
@@ -214,6 +219,11 @@ h3 {
   color: #ffffff;
   font-size: 36px;
   text-transform: uppercase;
+}
+@media screen and (max-width: 992px) {
+  .header-content__title__h1 {
+    font-size: 24px;
+  }
 }
 
 .navbar {
@@ -462,6 +472,10 @@ h3 {
   width: 100%;
   height: 100%;
 }
+.video-card-teaser__video img {
+  width: 100%;
+  height: 100%;
+}
 @media screen and (max-width: 768px) {
   .video-card-teaser__video {
     aspect-ratio: 4/3;
@@ -692,6 +706,11 @@ h3 {
   font-size: 24px;
   font-weight: 600;
   text-transform: uppercase;
+}
+@media screen and (max-width: 992px) {
+  .card-phases__date {
+    font-size: 18px;
+  }
 }
 .card-phases:hover .card-phases__title {
   text-decoration: underline;
