--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -38,6 +38,10 @@ a {
 h2 {
     font-size: 36px;
     text-transform: uppercase;
+
+    @include Table {
+        font-size: 24px;
+    }
 }
 
 h3 {
