--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -103,6 +103,10 @@
             color: $color-neutral-white;
             font-size: 36px;
             text-transform: uppercase;
+
+            @include Table {
+                font-size: 24px;
+            }
         }
     }
 }
