--- a/scss/modules/_phases.scss
+++ b/scss/modules/_phases.scss
@@ -51,6 +51,10 @@
         font-size: 24px;
         font-weight: 600;
         text-transform: uppercase;
+
+        @include Table {
+            font-size: 18px;
+        }
     }
     
     &:hover .card-phases__title {
