--- a/scss/modules/_video-teaser-card.scss
+++ b/scss/modules/_video-teaser-card.scss
@@ -34,6 +34,11 @@
             height: 100%;
         }
 
+        img {
+            width: 100%;
+            height: 100%;
+        }
+
         @include SmallTable {
             aspect-ratio: 4/3;
             height: auto;
